@@ -1,3 +1,6 @@
+2007-10-10 yo
+* Support tools in Business Templates.
+
 2007-09-08 yusei
 * Add Module Property action as global action.
 
